<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_300sdp"
    android:layout_marginStart="@dimen/_15sdp"
    android:gravity="center_horizontal"
    android:layout_marginTop="@dimen/_10sdp"
    android:layout_marginEnd="@dimen/_15sdp"
    android:background="@drawable/back_style_result"
    android:orientation="vertical">

    <FrameLayout

        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:background="@drawable/back_style_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/montserrat"
            android:text="@string/info"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold" />

    </FrameLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_18sdp"
            android:gravity="center_vertical"
            android:text="@string/info_text"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sdp" />


        <androidx.appcompat.widget.AppCompatButton

            android:id="@+id/yes"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/back_style_button"
            android:fontFamily="@font/montserrat"
            android:text="@string/ok"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold" />

    </LinearLayout>


</LinearLayout>
