<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/_15sdp"
    android:layout_marginTop="@dimen/_10sdp"
    android:layout_marginEnd="@dimen/_15sdp"
    android:background="@drawable/back_style_result"
    android:orientation="vertical">

    <FrameLayout

        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:background="@drawable/back_style_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/montserrat"
            android:text="@string/settings"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold" />

        <ImageView

            android:id="@+id/cancel"
            android:layout_width="@dimen/_36sdp"
            android:layout_height="@dimen/_36sdp"
            android:layout_gravity="end|center"
            android:layout_marginEnd="@dimen/_14sdp"
            android:background="@drawable/back_style_cancel"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/ic_baseline_cancel_24" />

    </FrameLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="@dimen/_300sdp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/_5sdp">

        <androidx.constraintlayout.widget.ConstraintLayout

            android:id="@+id/music"
            android:layout_width="@dimen/_230sdp"
            android:layout_height="@dimen/_42sdp"
            android:layout_margin="@dimen/_8sdp"
            android:background="@drawable/back_style_sound">

            <ImageView

                android:id="@+id/musicIcon"
                android:layout_width="@dimen/_28sdp"
                android:layout_height="@dimen/_28sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:src="@drawable/ic_baseline_music_note_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_50sdp"
                android:fontFamily="@font/montserrat"
                android:text="@string/music"
                android:textColor="@color/white"
                android:textSize="@dimen/_18sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.switchmaterial.SwitchMaterial

                android:id="@+id/musicSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:thumbTint="#FFEB3B"
                app:trackTint="@color/white"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout

            android:id="@+id/sound"
            android:layout_width="@dimen/_230sdp"
            android:layout_height="@dimen/_42sdp"
            android:layout_margin="@dimen/_8sdp"
            android:background="@drawable/back_style_sound">

            <ImageView

                android:id="@+id/soundIcon"
                android:layout_width="@dimen/_28sdp"
                android:layout_height="@dimen/_28sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:src="@drawable/ic_baseline_volume_up_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_50sdp"
                android:fontFamily="@font/montserrat"
                android:text="@string/sound"
                android:textColor="@color/white"
                android:textSize="@dimen/_18sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.switchmaterial.SwitchMaterial

                android:id="@+id/soundSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:thumbTint="#FFEB3B"
                app:trackTint="@color/white"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatButton

            android:id="@+id/lang"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_44sdp"
            android:layout_margin="@dimen/_8sdp"
            android:background="@drawable/back_style_button"
            android:fontFamily="@font/montserrat"
            android:text="@string/select_language"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/play"
            app:layout_constraintVertical_bias="0" />

        <androidx.appcompat.widget.AppCompatButton

            android:id="@+id/info"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_44sdp"
            android:layout_margin="@dimen/_8sdp"
            android:background="@drawable/back_style_button"
            android:fontFamily="@font/montserrat"
            android:text="@string/info"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/play"
            app:layout_constraintVertical_bias="0" />

    </LinearLayout>

</LinearLayout>