<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_20sdp"
    android:background="@drawable/back_style_result"
    android:orientation="vertical">

    <FrameLayout

        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:background="@drawable/back_style_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/montserrat"
            android:text="@string/language"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold" />

        <ImageView

            android:id="@+id/cancel"
            android:layout_width="@dimen/_36sdp"
            android:layout_height="@dimen/_36sdp"
            android:layout_gravity="end|center"
            android:layout_marginEnd="@dimen/_14sdp"
            android:background="@drawable/back_style_cancel"
            android:clickable="true"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/ic_baseline_cancel_24" />

    </FrameLayout>

    <FrameLayout

        android:id="@+id/uz"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:background="@drawable/back_style_item"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout

            android:id="@+id/pictures"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/back_style_image"
            android:gravity="center"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView

                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:scaleType="centerCrop"
                android:src="@drawable/uzb" />

        </LinearLayout>

        <TextView

            android:id="@+id/uzText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uzbek"
            android:layout_gravity="center"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_18sdp" />

        <ImageView

            android:id="@+id/uzImage"
            android:layout_width="@dimen/_26sdp"
            android:layout_gravity="center|end"
            android:layout_height="@dimen/_26sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:src="@drawable/ic_baseline_check_24" />

    </FrameLayout>


    <FrameLayout

        android:id="@+id/ru"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:background="@drawable/back_style_item"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout

            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/back_style_image"
            android:gravity="center"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView

                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:scaleType="centerCrop"
                android:src="@drawable/rus" />

        </LinearLayout>

        <TextView

            android:id="@+id/ruText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/russian"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_18sdp" />

        <ImageView

            android:id="@+id/ruImage"
            android:layout_width="@dimen/_26sdp"
            android:layout_gravity="center|end"
            android:layout_height="@dimen/_26sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:src="@drawable/ic_baseline_check_24"
            android:visibility="gone" />

    </FrameLayout>


    <FrameLayout

        android:id="@+id/eng"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:background="@drawable/back_style_item"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout

            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/back_style_image"
            android:gravity="center"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView

                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:scaleType="centerCrop"
                android:src="@drawable/eng" />

        </LinearLayout>

        <TextView

            android:id="@+id/engText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/english"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_18sdp" />

        <ImageView

            android:id="@+id/engImage"
            android:layout_width="@dimen/_26sdp"
            android:layout_height="@dimen/_26sdp"
            android:layout_gravity="center|end"
            android:layout_marginEnd="@dimen/_10sdp"
            android:src="@drawable/ic_baseline_check_24"
            android:visibility="gone" />

    </FrameLayout>


</LinearLayout>