<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#041F2E"
    tools:context=".screen.MainScreen">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0">

        <ImageView

            android:id="@+id/setting"
            android:layout_width="@dimen/_32sdp"
            android:layout_height="@dimen/_32sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:src="@drawable/settings"
            android:padding="@dimen/_5sdp"
            android:clickable="true"
            android:background="@drawable/back_style_menu"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white" />


        <ImageView

            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:src="@drawable/ic_coin_svgrepo_com__2_"
            app:layout_constraintBottom_toBottomOf="@id/coinsCount"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintLeft_toRightOf="@id/setting"
            app:layout_constraintRight_toLeftOf="@id/coinsCount"
            app:layout_constraintTop_toTopOf="@id/coinsCount"
            app:tint="#FFC107" />

        <TextView

            android:id="@+id/coinsCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_15sdp"
            android:text="420"
            android:textColor="@color/white"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout

        android:id="@+id/pictures"
        android:layout_width="@dimen/_170sdp"
        android:layout_height="@dimen/_170sdp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text"
        app:layout_constraintVertical_bias="0.1">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_2sdp"
                android:layout_weight="1"
                android:background="@drawable/back_style_image"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/_5sdp"
                    app:cardCornerRadius="@dimen/_5sdp">


                    <ImageView

                        android:id="@+id/image_one"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/apple" />

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_2sdp"
                android:layout_weight="1"
                android:background="@drawable/back_style_image"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/_5sdp"
                    app:cardCornerRadius="@dimen/_5sdp">


                    <ImageView

                        android:id="@+id/image_two"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/unnamed" />

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_2sdp"
                android:layout_weight="1"
                android:background="@drawable/back_style_image">

                <androidx.cardview.widget.CardView

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/_5sdp"
                    app:cardCornerRadius="@dimen/_5sdp">


                    <ImageView

                        android:id="@+id/image_three"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/apple" />

                </androidx.cardview.widget.CardView>


            </LinearLayout>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_2sdp"
                android:layout_weight="1"
                android:background="@drawable/back_style_image">

                <androidx.cardview.widget.CardView

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/_5sdp"
                    app:cardCornerRadius="@dimen/_5sdp">


                    <ImageView


                        android:id="@+id/image_four"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/unnamed" />

                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout

        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/back_style_level"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@id/pictures"
        app:layout_constraintLeft_toLeftOf="@id/pictures"
        app:layout_constraintRight_toRightOf="@id/pictures"
        app:layout_constraintTop_toTopOf="@id/pictures">

        <TextView

            android:id="@+id/level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/white"
            android:textSize="@dimen/_18sdp" />

    </LinearLayout>

    <TextView

        android:id="@+id/text"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0"
        android:textSize="@dimen/_30sdp"
        android:textStyle="bold"
        android:fontFamily="@font/montserrat"
        android:textColor="#53ECFF"
        android:shadowColor="#4CAF50"
        android:gravity="center"
        android:shadowDx="10"
        android:shadowRadius="10"
        android:text="@string/game_name"
        android:shadowDy="10"
        android:layout_marginTop="@dimen/_40sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <androidx.appcompat.widget.AppCompatButton

        android:id="@+id/play"
        android:layout_width="@dimen/_190sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:background="@drawable/back_style_button"
        android:fontFamily="@font/montserrat"
        android:text="@string/play"
        android:textColor="@color/black"
        android:textSize="@dimen/_16sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pictures"
        app:layout_constraintVertical_bias="0" />

    <androidx.appcompat.widget.AppCompatButton

        android:id="@+id/exit"
        android:layout_width="@dimen/_190sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/back_style_button"
        android:fontFamily="@font/montserrat"
        android:text="@string/exit"
        android:textColor="@color/black"
        android:textSize="@dimen/_16sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/play"
        app:layout_constraintVertical_bias="0" />

</androidx.constraintlayout.widget.ConstraintLayout>